Add some features in Pages

--- a/websiteFromOdin/index.html
+++ b/websiteFromOdin/index.html
@@ -17,14 +17,37 @@
             </div>
         </div>
         <div class="body">
-            <div class="description">
+            <div class="description blocks">
                 <h1>This Website is Awesome</h1>
                 <p>This website have some subtext that goes here under the main title. 
                     It's a smaller font and the color is lower contrast.
                 </p>
                 <button>Sign up</button>
             </div>
-            <div class="image-placeholder">this is a placeholder for image</div>
+            <div class="image-placeholder blocks"><p>this is a placeholder for image</p></div>
+        </div>
+    </div>
+    <div class="second-page">
+        <div class="second-page-box first-box">
+            <h1>Some Random Information</h1>
+        </div>
+        <div class="second-page-box second-box">
+            <div class="second-box-inside-boxes">
+                <div class="pics"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="second-box-inside-boxes">
+                <div class="pics"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="second-box-inside-boxes">
+                <div class="pics"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="second-box-inside-boxes">
+                <div class="pics"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
     
