--- a/websiteFromOdin/index.html
+++ b/websiteFromOdin/index.html
@@ -11,9 +11,9 @@
         <div class="logo-link">
             <h1>Header Logo</h1>
             <div class="go-to">
-                <ul>header link one</ul>
-                <ul>header link two</ul>
-                <ul>header link three</ul>
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="#go-to-fourth-page">header link three</a>
             </div>
         </div>
         <div class="body">
@@ -50,6 +50,26 @@
             </div>
         </div>
     </div>
-    
+    <div class="third-page">
+        <div class="contents">
+            <p>This is an inspiration qoute, or a testimonial from a customer. Maybe it's just
+                filling up space, or maybe people will actually read it. Who knows? All I know 
+                is that it looks nice.
+            </p>
+            <h1>-Thor, God of Thunder</h1>
+        </div>
+    </div>
+    <div class="fourth-page" id="go-to-fourth-page">
+        <div class="fourth-page-contents">
+            <div class="jk">
+                <p><span style="font-size: 25px;">Call to Action! It's Time</span> 
+                <br><span style="opacity: 0.7;">Sign up for our product by clicking the button right over there!</span></p>
+            </div>
+            <button>Sign Up</button>
+        </div>
+    </div>
+    <div class="fifth-page">
+        <p>Copyright © The Odin Project 2021</p>
+    </div>
 </body>
 </html>
