--- a/javaScriptsForBrainDamage/index.html
+++ b/javaScriptsForBrainDamage/index.html
@@ -8,6 +8,10 @@
 <body>
     <button id="btn">CLICK</button>
     <p id="txt">The engine has stopped</p>
+    
+    <p id="es">Sasd</p>
+
+
     <script src="script.js"></script>
 </body>
 </html>
