--- a/javaScriptsForBrainDamage/index.html
+++ b/javaScriptsForBrainDamage/index.html
@@ -12,7 +12,7 @@
     <p id="es">Sasd</p>
 
 
-    <script src="minus1.js"></script>
-
+    <!-- <script src="minus1.js"></script> -->
+    <script src="jsFunction.js"></script>
 </body>
 </html>
