Naa nakos function sa AI

--- a/javaScriptsForBrainDamage/index.html
+++ b/javaScriptsForBrainDamage/index.html
@@ -7,9 +7,8 @@
 </head>
 <body>
     <button id="btn">CLICK</button>
-    <p id="txt">The engine has stopped</p>
+    <p id="txt"></p>
     
-    <p id="es">Sasd</p>
 
 
     <!-- <script src="minus1.js"></script> -->
