--- a/rockpaperscissor/index.html
+++ b/rockpaperscissor/index.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors with AI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="human boxes">
+            <div><h1>HUMAN</h1></div>
+            <div class="cont">
+                <button class="rock btn">ROCK</button>
+                <button class="paper btn">PAPER</button>
+                <button class="scissor btn">SCISSOR</button>
+            </div>
+            <button id="select">SELECT</button>
+        </div>
+        <div class="vs">
+            <h1>VS</h1>
+            <p class="winORlose"></p>
+        </div>
+        <div class="robot boxes">
+            <div><h1>AI</h1></div>
+            <div class="cont">
+                <button class="rock btn">ROCK</button>
+                <button class="paper btn">PAPER</button>
+                <button class="scissor btn">SCISSOR</button>
+            </div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
