Complete Rock Paper and Scissor game with AI

--- a/rockpaperscissor/index.html
+++ b/rockpaperscissor/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="vs">
             <h1>VS</h1>
-            <p class="winORlose"></p>
+            <p id="winORlose"></p>
         </div>
         <div class="robot boxes">
             <div><h1>AI</h1></div>
