--- a/javaScriptsForBrainDamage/index.html
+++ b/javaScriptsForBrainDamage/index.html
@@ -12,6 +12,6 @@
 
 
     <!-- <script src="minus1.js"></script> -->
-    <script src="jsFunction.js"></script>
+    <script src="learnArray.js"></script>
 </body>
 </html>
