--- a/javaScriptsForBrainDamage/DOM/index.html
+++ b/javaScriptsForBrainDamage/DOM/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.6.0.min.js"></script>
+    <script src="jquery.js" defer></script>
 </head>
 <body>
+    <div id="container" style="display: flex; flex-direction: column; gap: 20px;">
+        <button id="btn1">Click Me</button>
+        <button id="btn2">Clicks Me</button>
+        <button id="btn3">Click Me</button>
+    </div>
     
-    <script src="exercise.js"></script>
+    
 </body>
 </html>
