--- a/rockpaperscissor/index.html
+++ b/rockpaperscissor/index.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <div class="human boxes">
+            <p id="humscore">0</p>
             <div><h1>HUMAN</h1></div>
             <div class="cont">
                 <button class="rock btn">ROCK</button>
@@ -22,6 +23,7 @@
             <p id="winORlose"></p>
         </div>
         <div class="robot boxes">
+            <p id="robscore">0</p>
             <div><h1>AI</h1></div>
             <div class="cont">
                 <button class="rock btn">ROCK</button>
