--- a/createWebPageLoginOrSignUp/index.html
+++ b/createWebPageLoginOrSignUp/index.html
@@ -18,7 +18,7 @@
                     realize your deepest dreams.</p>
                 <p>You <span style="font-style: italic;">know</span> you want to.</p>
             </section>
-            <form action="log-in" method="get">
+            <form action="#" method="post" id="ffform">
                 <h1>Let's Do This!!!</h1>
                 <div class="form-container">
                     <div class="fill-ups">
