--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -11,8 +11,8 @@
         <div class="ply1 players">
             <h1>RECORD</h1>
             <div class="record">
-                <p class="win">Wins: </p>
-                <p class="lose">Lose: </p>
+                <div class="winCon"><p>Wins: </p><p class="win"></p></div>
+                <div class="loseCon"><p>Lose: </p><p class="lose"></p></div>
             </div>
             <div class="user">
                 <div class="turn">
@@ -36,8 +36,8 @@
         <div class="ply2 players">
             <h1>RECORD</h1>
             <div class="record">
-                <p class="win">Wins: </p>
-                <p class="lose">Lose: </p>
+                <div class="winCon"><p>Wins: </p><p class="win"></p></div>
+                <div class="loseCon"><p>Lose: </p><p class="lose"></p></div>
             </div>
             <div class="user">
                 <div class="turn">
